# ttp-oracle

./: .eslintrc.js  .gitignore  README.md  index.d.ts  jest.config.js  package.json  tsconfig.json
exampleOracleClient/: index.test.ts  index.ts  requestBufferData.js
programs/TTPOracle/: Cargo.toml
programs/TTPOracle/src/: lib.rs
programs/example_oracle_client/: Cargo.toml
programs/example_oracle_client/src/: lib.rs  processor.rs
programs/ttp_oracle/: Cargo.toml
programs/ttp_oracle/src/: entrypoint.rs  instruction.rs  lib.rs  oracle_account.rs  processor.rs  request.rs  response.rs
scripts/: build.sh  generate-program.sh  setup.sh  test.sh
server/: README.md  index.ts  jest.config.js  package.json  tsconfig.server.json
server/models/: DataAccount.ts  OracleAccount.test.ts  OracleAccount.ts  Request.test.ts  Request.ts  RequestQueue.test.ts  RequestQueue.ts  Response.test.ts  Response.ts  Task.test.ts  Task.ts
server/scripts/: generateOracleDataAccount.ts  makeSampleRequest.ts
server/utils/: cluster.ts  createDataAccountForProgram.test.ts  createDataAccountForProgram.ts  handleAccountChange.ts  index.ts  reduceTasks.test.ts  reduceTasks.ts  sendTransactionToHandleResponse.ts
testing/: deployPrograms.ts  mockData.ts  setup.ts  testHelper.test.ts  testHelper.ts
