[package]
name = "TTPOracle"
version = "0.0.1"
authors = [""]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
no-entrypoint = []
program = ["solana-sdk/program"]
default = ["solana-sdk/default"]

[dependencies]
solana-sdk = { version = "=1.3.17", default-features = false, optional = true }

[lib]
name = "solana_bpf_TTPOracle" # very important to match this structure, used in the build script
crate-type = ["cdylib", "lib"]
