[package]
name = "ttp_oracle"
version = "0.0.1"
authors = [""]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
no-entrypoint = []
program = ["solana-sdk/program"]
default = ["solana-sdk/default"]

[dependencies]
serde = "1.0.117"
serde-big-array = "0.3.0"
solana-sdk = { version = "=1.3.17", default-features = false, optional = true }
arrayref = "0.3.6"
bincode = "1.3.1"
generic-array = { version = "0.14.4", default-features = false, features = ["serde"] }

[lib]
name = "solana_bpf_ttp_oracle" # very important to match this structure, used in the build script
crate-type = ["cdylib", "lib"]
