[package]
name = "ttp_oracle"
version = "0.0.1"
authors = [""]
edition = "2018"

[features]
no-entrypoint = []

[dependencies]
solana-program = "1.4.4"
arrayref = "0.3.6"
generic-array = { version = "0.14.4", default-features = false, features = ["serde"] }

[lib]
name = "solana_bpf_ttp_oracle"
crate-type = ["cdylib", "lib"]
